--- a/html/assignment_6/assignment_6.html
+++ b/html/assignment_6/assignment_6.html
@@ -82,8 +82,108 @@
       <col id="weekdays" span="5">
       <col id="weekends" span="2">
     </colgroup>
+    <thead>
+      <tr>
+        <th>Sun</th>
+        <th>Mon</th>
+        <th>Tue</th>
+        <th>Wed</th>
+        <th>Thu</th>
+        <th>Fri</th>
+        <th>Sat</th>
+      </tr>
+    </thead>
+    <tr>
+      <td data-date="Sun, Aug 29, 2021">
+        <h1>29</h1>
+        <dl>
+          <dt>Carson Quartet</dt>
+          <dd>1 pm</dd>
+          <dd>$12</dd>
+        </dl>
+      </td>
+      <td data-date="Mon, Aug 30, 2021">
+        <h1>30</h1>
+        <dl>
+          <dt>Harlem Choir</dt>
+          <dd>8 pm</dd>
+          <dd>$18/$24/$32</dd>
+        </dl>
+      </td>
+      <td data-date="Tue, Aug 31, 2021">
+        <h1>31</h1>
+      </td>
+      <td data-date="Wed, Sep 1, 2021">
+        <h1>1</h1>
+      </td>
+      <td data-date="Thu, Sep 2, 2021">
+        <h1>2</h1>
+      </td>
+      <td data-date="Fri, Sep 3, 2021">
+        <h1>3</h1>
+        <dl>
+          <dt>Taiwan Acrobats</dt>
+          <dd>8 pm</dd>
+          <dd>$24/$32/$48</dd>
+        </dl>
+      </td>
+      <td data-date="Sat, Sep 4, 2021">
+        <h1>4</h1>
+      </td>
+    </tr>
+    <tr>
+      <td data-date="Sun, Sep 5, 2021">
+        <h1>5</h1>
+        <dl>
+          <dt> Carson Quartet </dt>
+          <dt>1 pm</dt>
+          <dt>$12</dt>
+        </dl>
+      </td>
+      <td data-date="Mon, Sep 6, 2021">
+        <h1>6</h1>
+      </td>
+      <td data-date="Tue, Sep 7, 2021">
+        <h1>7</h1>
+        <dl>
+          <dt>Ralph William</dt>
+          <dt>8 pm</dt>
+          <dt>$24/$36/$42</dt>
+        </dl>
+      </td>
+      <td data-date="Wed, Sep 8, 2021">
+        <h1>8</h1>
+      </td>
+      <td data-date="Thu, Sep 9, 2021">
+        <h1>9</h1>
+        <dl>
+          <dt>West Side Story</dt>
+          <dt>7 pm</dt>
+          <dt>$36/$48/$64</dt>
+        </dl>
+      </td>
+      <td data-date="Fri, Sep 10, 2021">
+        <h1>10</h1>
+        <dl>
+          <dt>West Side Story</dt>
+          <dt>7 pm</dt>
+          <dt>$36/$48/$64</dt>
+        </dl>
+      </td>
+      <td data-date="Sat, Sep 11, 2021">
+        <h1>11</h1>
+        <dl>
+          <dt>
+          <dt>West Side Story</dt>
+          <dt>7 pm</dt>
+          <dt>$36/$48/$64</dt>
+          </dt>
+        </dl>
+      </td>
+    </tr>
+    </tbody>
     <header>
-      
+
     </header>
   </table>
   <footer>
