--- a/tesla-webpage/about.html
+++ b/tesla-webpage/about.html
@@ -6,59 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Tesla_Motors.svg.png" type="x-icon">
     <title>Tesla Company History</title>
-    <style>
-        body {
-            font-family: Roboto, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            overflow: auto;
-            max-height: 120vh;
-        }
-
-        .year {
-            font-weight: bold;
-        }
-
-        .event {
-            margin-bottom: 2rem;
-            padding-bottom: 1rem;
-            border-bottom: 1px solid #ddd;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        nav {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 0.5rem;
-
-        }
-
-        nav a {
-            color: black;
-            text-decoration: none;
-            margin: 0 1rem;
-
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
