--- a/tesla-webpage/index.html
+++ b/tesla-webpage/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Tesla_Motors.svg.png" type="x-icon">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="Tesla_Motors.svg.png" type="x-icon">
   <title>TESLA</title>
-  </head>
-  <body>
-   <div class="container"> 
+</head>
+
+<body>
+  <div class="container">
     <video autoplay loop muted plays-inline class="back-video">
       <source src="tesla.mp4" type="video/mp4">
     </video>
-    
+
     <nav>
       <img src="TeslaLogo.jpg" class="logo">
       <ul>
@@ -20,12 +23,13 @@
         <li><a href="order.html">Models</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-      </nav>
-      <div class="content">
-        <h1>Future is Now</h1>
-        <h2>&#8376; &#8364; &#8375; &#8466; &#8371; &#169;</h2>
-        <a href="order.html">Order</a>
-      </div>
-   </div> 
-  </body>
+    </nav>
+    <div class="content">
+      <h1>Future is Now</h1>
+      <h2>&#8376; &#8364; &#8375; &#8466; &#8371; &#169;</h2>
+      <a href="order.html">Order</a>
+    </div>
+  </div>
+</body>
+
 </html>
