--- a/tesla-webpage/order.html
+++ b/tesla-webpage/order.html
@@ -6,69 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Tesla_Motors.svg.png" type="x-icon">
     <title>Tesla Gallery</title>
-    <style>
-        body {
-            font-family: Roboto, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            overflow: auto;
-            max-height: 80vh;
-        }
-
-        .year {
-            font-weight: bold;
-        }
-
-        .event {
-            margin-bottom: 1rem;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            padding: 2rem;
-        }
-
-        .gallery img {
-            max-width: 100%;
-            height: auto;
-            border: 1px solid #ddd;
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        nav {
-            background-color: #fff;
-            color: #fff;
-            text-align: center;
-            padding: 0.5rem;
-        }
-
-        nav a {
-            color: black;
-            text-decoration: none;
-            margin: 0 1rem;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="order.css">
 </head>
 
 <body>
