webpage project done

--- a/tesla-webpage/page3.html
+++ b/tesla-webpage/page3.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Tesla_Motors.svg.png" type="x-icon">
+    <link rel="icon" href="media/Tesla_Motors.svg.png" type="x-icon">
     <title>Tesla Company History</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/page3.css">
+    <script src="script/app.js" defer></script>
 </head>
 
-<body>
+<body class="light-theme">
     <nav>
         <a href="index.html">Home</a>
-        <a href="order.html">Models</a>
-        <a href="about.html">About</a>
+        <a href="page2.html">Models</a>
+        <a href="page3.html">About</a>
     </nav>
     <header>
         <h1>Tesla Company History</h1>
@@ -23,7 +24,7 @@
         <div class="event">
             <span class="year">2003:</span> Tesla Motors founded by Martin Eberhard and Marc Tarpenning
 
-            <img src="TeslaLogo.jpg" alt="Tesla Motors logo">
+            <img src="media/TeslaLogo.jpg" alt="Tesla Motors logo">
             <p> Tesla was incorporated in July 2003 by Martin Eberhard and Marc Tarpenning as Tesla Motors. The
                 company's name is a tribute to inventor and electrical engineer Nikola Tesla. In February 2004, via a
                 $6.5 million investment, Elon Musk became the company's largest shareholder. He became CEO in 2008.
@@ -91,7 +92,9 @@
             <span class="year">2021:</span> Tesla's market capitalization reaches new heights, solidifying its position
             as one of the world's most valuable companies.
         </div>
-
+    </div>
+    <div>
+        <button class="btn">Dark</button>
     </div>
 </body>
 
