--- a/tesla-webpage/index.html
+++ b/tesla-webpage/index.html
@@ -4,31 +4,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="Tesla_Motors.svg.png" type="x-icon">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="icon" href="media/Tesla_Motors.svg.png" type="x-icon">
+  <script src="script/app.js" defer></script>
   <title>TESLA</title>
 </head>
 
-<body>
+<body class="light-theme">
   <div class="container">
     <video autoplay loop muted plays-inline class="back-video">
-      <source src="tesla.mp4" type="video/mp4">
+      <source src="media/tesla.mp4" type="video/mp4">
     </video>
-
     <nav>
-      <img src="TeslaLogo.jpg" class="logo">
+      <img src="media/TeslaLogo.jpg" class="logo">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="order.html">Models</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="page2.html">Models</a></li>
+        <li><a href="page3.html">About</a></li>
       </ul>
     </nav>
     <div class="content">
       <h1>Future is Now</h1>
       <h2>&#8376; &#8364; &#8375; &#8466; &#8371; &#169;</h2>
-      <a href="order.html">Order</a>
+      <a href="page2.html">Order</a>
     </div>
+    <div>
+      <button class="btn">Dark</button>
+  </div>
   </div>
 </body>
 
